--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    before
-    <br />
-    <%- body %>
-    <br />
-    After
+    <%- include('../partials/header.ejs')%> <%-
+    include('../partials/errorMessage.ejs')%> <%- body %>
   </body>
 </html>
