Books/Create/Index/New

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,10 @@
-Middle
+<h2>Recently Added</h2>
+<div>
+    <% books.forEach(book => { %>
+    <div>
+      <img height="150" width="100" src="<%= book.coverImagePath %>"
+      <p><%= book.title %></p>
+      <p><%= book.publishDate.toISOString().split('T')[0] %></p>
+    </div>
+    <% }) %>
+  </div>
