File Upload Database

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,10 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://unpkg.com/filepond@^4/dist/filepond.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css"
+      rel="stylesheet"
+    />
+    <title>BookStore</title>
   </head>
   <body>
     <%- include('../partials/header.ejs')%> <%-
     include('../partials/errorMessage.ejs')%> <%- body %>
+
+    <!-- SCRIPTS -->
+    <script src="https://unpkg.com/filepond@^4/dist/filepond.js"></script>
+    <script src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
+    <script src="https://unpkg.com/filepond-plugin-image-resize/dist/filepond-plugin-image-resize.js"></script>
+
+    <script src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        FilePond.registerPlugin(FilePondPluginImagePreview);
+        FilePond.registerPlugin(FilePondPluginImageResize);
+        FilePond.registerPlugin(FilePondPluginFileEncode);
+        const inputElement = document.querySelector('input[type="file"]');
+        const style = FilePond.setOptions({
+          stylePanelAspectRatio: 150 / 100,
+          imageResizeTargetWidth: 100,
+          imageResizeTargetHeight: 150,
+        });
+        const pond = FilePond.create(inputElement);
+        FilePond.parse(document.body);
+      });
+    </script>
   </body>
 </html>
