--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,7 +1,2 @@
 <label>Name</label>
-<input
-  type="text"
-  name="name"
-  placeholder="Enter username"
-  value="<%= author.name%>"
-/>
+<input type="text" name="name" value="<%= author.name%>" />
