Finish Book Routes

--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -34,5 +34,5 @@
 </div>
 <div>
   <label>Descrpition</label>
-  <textarea name="description" value="<%= book.description %>"> </textarea>
+  <textarea name="description" ><%= book.description %> </textarea>
 </div>
