--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,9 @@
 <div>
     <% books.forEach(book => { %>
     <div>
-      <img height="150" width="100" src="<%= book.coverImagePath %>"
+      <a href="/books/<%= book.id %>">
+        <img height="150" width="100" src="<%= book.coverImagePath %>">
+      </a>
       <p><%= book.title %></p>
       <p><%= book.publishDate.toISOString().split('T')[0] %></p>
     </div>
