--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,6 +2,7 @@
     @import "shared/variables.css";
     @import "shared/header.css";
     @import "shared/buttons.css";
+    @import "shared/form.css";
 
     :root {
         font-family: 'Nunito', sans-serif;
@@ -31,4 +32,19 @@
     .page-header{
         font-size: 2rem;
         font-weight: 500;
+    }
+
+    ::-webkit-scrollbar {
+        background-color:var( --color-background-light); 
+        width: .625rem;
+    }
+  
+    ::-webkit-scrollbar-thumb {
+        background-color: var(--color-text-light); 
+        border-radius: .5rem;
+        width: 1px;
+    }
+    
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: var(--color-background-dark); 
     }
