Last changes project

--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -40,7 +40,7 @@
 <div class="form-row">
   <div class="form-item form-item-no-grow">
     <label>Cover</label>
-    <input type="file" name="cover" class="filepond" />
+    <input type="file" name="cover" class="book-input-cover filepond" />
   </div>
   <div class="form-item">
     <label>Descrpition</label>
