--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,10 @@
     @import "shared/header.css";
     @import "shared/buttons.css";
     @import "shared/form.css";
+    @import "shared/author.css";
+    @import "shared/book.css";
+
+
 
     :root {
         font-family: 'Nunito', sans-serif;
@@ -47,4 +51,8 @@
     
     ::-webkit-scrollbar-thumb:hover {
         background-color: var(--color-background-dark); 
+    }
+
+    .error-message{
+        color: hsl(var(--color-danger-hue), 100%, 50%)
     }
