--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -29,12 +29,4 @@
   </div>
 </form>
 <br />
-<div>
-  <% books.forEach(book => { %>
-  <a href="/books/<%= book.id %>">
-    <img height="150" width="100" src="<%= book.coverImagePath %>" />
-  </a>
-  <p><%= book.title %></p>
-  <p><%= book.publishDate.toISOString().split('T')[0] %></p>
-  <% }) %>
-</div>
+<%- include("../partials/bookGrid", { books: books, large: true}) %>
