--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -11,24 +11,16 @@
       href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/stylesheets/main.css">
+    <link id="main-css" rel="stylesheet" href="/stylesheets/main.css" />
     <title>Library</title>
   </head>
   <body>
-    
-    
     <div class="container">
       <%- include('../partials/header.ejs')%>
       <div class="inner-container">
-        <%- include('../partials/errorMessage.ejs')%>
-        <%- body %>
+        <%- include('../partials/errorMessage.ejs')%> <%- body %>
       </div>
     </div>
-
-
-
-
-
 
     <!-- SCRIPTS -->
     <script src="https://unpkg.com/filepond@^4/dist/filepond.js"></script>
