--- a/public/stylesheets/shared/book.css
+++ b/public/stylesheets/shared/book.css
@@ -77,3 +77,9 @@
     grid-area: author;
     justify-self: stretch;
 }
+
+.image-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
