--- a/views/books/show.ejs
+++ b/views/books/show.ejs
@@ -2,7 +2,7 @@
 <div class="book-details">
   <div>
     <img
-      class="book-cover"
+      class="book"
       src="<%= book.coverImagePath %>"
       alt="<%= book.title %>"
     />
